--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jade": "~1.6.0",
     "mongoose": "~3.8.20",
     "morgan": "~1.3.0",
+    "mysql": "^2.10.2",
     "serve-favicon": "~2.1.3"
   }
 }
